# HSO----Ecosystem_Simulation

./: README.md
Graphics/: tempos.txt
Report/Tex/: CP_Work2.aux  CP_Work2.blg  CP_Work2.dvi  CP_Work2.out  CP_Work2.tex
Report/Tex/Diagrams/: MatrixDiv.dia  MatrixDiv.dia~
Source/mp1/: CMakeLists.txt  compara.sh  compara_tempo.sh  eco.c  eco.h  grafico_tempo.sh  main.c
Source/mp2/: compara.sh  eco.c  eco.h  main.c
Source/sp/: eco.c  eco.h  main.c
